syntax = "proto3";

package calculator;

service Calculator {
    rpc Add(CalculationRequest) returns (CalculationResponse);
    rpc Devide(CalculationRequest) returns (CalculationResponse);
}

message CalculationRequest {
    int64 a = 1;
    int64 b = 2;
}

message CalculationResponse {
    int64 result = 1;
}

service Admin {
    rpc GetRequestCount(RequestCountRequest) returns (RequestCountResponse);
}

message RequestCountRequest {}
message RequestCountResponse {
    int64 count = 1;
}